src/styles.css
:root {
  --bg-color-primary: #fffaf0;
  --font-color-link: #477e91;
  --font-color-primary: #333;
  --font-family-content: monospace;
  --font-family-primary: sans-serif;
  --font-size-h1: 2rem;
  --font-size-h2: 1.5rem;
  --font-size-h3: 1.25rem;
  --font-size-primary: 120%;
  --section-fade-in-length: 1.75s;

  --icon-color-check: darkseagreen;
  --icon-color-in-progress: orange;
  --icon-color-todo: gray;
}

html {
  color: var(--font-color-primary);
  background-color: var(--bg-color-primary);
  font-size: var(--font-size-primary);
  font-family: var(--font-family-primary);
}

#application {
  display: grid;
  row-gap: 10px;
  grid-template-rows: min-content;
  justify-content: center;
  padding: 1em;
}

p {
  font-family: var(--font-family-content);
}

h1 {
  font-size: var(--font-size-h1);
}

h2 {
  font-size: var(--font-size-h2);
}

h3 {
  font-size: var(--font-size-h3);
}

a {
  color: var(--font-color-link);
  text-decoration: none;
  font-family: var(--font-family-content);
  display: inline-block;
  padding-left: 0;
  transition: padding 0.1s;
}

/* app styling */
ul {
  list-style: none;
  padding: 0;
  margin: 0;

  li {
    padding-bottom: 1em;
  }

  ul {
    list-style: none;
    margin-left: 1em;
    margin-top: 1em;
    margin-bottom: 0.5em;
    font-size: 0.9em;

    li {
      padding-bottom: 0.25em;
    }
  }
}

i {
  &::before {
    /* Common styles for all icons */
    font-size: 20px;
    margin-right: 0.5em;
    padding: 0;
    line-height: 20px;
    height: 20px;
    display: inline-block;
  }

  &.done::before {
    /* Filled circle icon */
    content: '\25CF';
    color: var(--icon-color-check);
  }

  &.in-progress::before {
    /* Filled circle icon */
    content: '\25CF';
    color: var(--icon-color-in-progress);
  }

  &.todo::before {
    /* Empty icon */
    content: '\25CB';
    color: var(--icon-color-todo);
  }
}

li.animated > span:hover {
  padding-left: 4px;
  transition: 0.25s;
}

.section:nth-child(1) {
  /* fade in */
  opacity: 0;
  animation: fadeIn var(--section-fade-in-length, 1.75s) forwards;
}
.section:nth-child(2) {
  /* fade in */
  opacity: 0;
  animation: fadeIn var(--section-fade-in-length, 1.75s) forwards;
  animation-delay: 0.25s;
}
.section:nth-child(3) {
  /* fade in */
  opacity: 0;
  animation: fadeIn var(--section-fade-in-length, 1.75s) forwards;
  animation-delay: 0.5s;
}
.section:nth-child(4) {
  /* fade in */
  opacity: 0;
  animation: fadeIn var(--section-fade-in-length, 1.75s) forwards;
  animation-delay: 0.75s;
}

.footer {
  opacity: 0;
  animation: fadeIn var(--section-fade-in-length, 2s) forwards;
  animation-delay: 0.75s;
  margin-top: 20px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

/* animations */
@media screen and (max-width: 600px) {
  .footer {
    grid-template-columns: 1fr;
    row-gap: 0;
  }
  .footer p {
    margin: 4px;
  }
}

@keyframes fadeIn {
  to {
    opacity: 1;
  }
}

